fixed broken page labelling because of viewport scaling on mobile devices

--- a/AquaticSpaceCompanion/www/css/styles.css
+++ b/AquaticSpaceCompanion/www/css/styles.css
@@ -21,7 +21,7 @@ and open the template in the editor.
 #progressLabelPages
 {
     margin-top: -4px;
-    font-size: 0.2em;
+    font-size: 8px;
     text-shadow: none;
 }
 
